samples/yaml/dnsutils.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dnsutils-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: dnsutils
  replicas: 1
  template:
    metadata:
      labels:
        app: dnsutils
    spec:
      containers:
      - name: dnsutils
        image: leenetregistry.azurecr.io/jessie-dnsutils:1.3
        imagePullSecrets:
          - name: leenet-registry
        command:
          - sleep
          - "infinity"
