samples/yaml/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "leenet.link"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "leenet.link"
    tls:
      credentialName: leenet-link-route53-dns-tls
      mode: SIMPLE
