samples/yaml/virtual-service-kubernetes-dashboard.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubernetes-dashboard
spec:
  hosts:
  - "leenet.link"
  gateways:
  - default/my-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: my-kubernetes-dashboard
        port:
          number: 9090
